// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildTarget BuildTarget is synthesized correctly 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/pyproject.toml
.venv/
*.egg-info
build
*.pyc
__pycache__
.cache
!/.python-version
.ipynb_checkpoints
",
  ".projen/deps.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "dependencies": [
      {
        "name": "pip-tools",
        "type": "devenv",
        "version": "==7.4.1",
      },
    ],
  },
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      ".python-version",
      "pyproject.toml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Build project (install deps, compile and package)",
        "name": "build",
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "install": {
        "description": "Install dependencies from constraints.txt",
        "name": "install",
        "steps": [
          {
            "exec": ".venv/bin/pip install --require-virtualenv -c constraints.txt",
          },
        ],
      },
      "install-dev": {
        "description": "Install dependencies from constraints-dev.txt",
        "name": "install-dev",
        "steps": [
          {
            "exec": ".venv/bin/pip install --require-virtualenv -c constraints-dev.txt .[dev]",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "prepare-venv": {
        "description": "Create python virtual environment in .venv",
        "name": "prepare-venv",
        "steps": [
          {
            "exec": "python -m venv .venv",
          },
          {
            "exec": ".venv/bin/pip install pip-tools==7.4.1",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
      "update-lockfile": {
        "description": "Update lock file (constraints.txt) according to pyproject.toml",
        "name": "update-lockfile",
        "steps": [
          {
            "say": "Prepare venv",
            "spawn": "prepare-venv",
          },
          {
            "exec": ".venv/bin/pip-compile --all-build-deps --output-file=constraints.txt pyproject.toml",
            "say": "Updating lock file (runtime)",
          },
          {
            "exec": ".venv/bin/pip-compile --all-build-deps --extra dev --strip-extras --output-file=constraints-dev.txt pyproject.toml",
            "say": "Updating lock file (dev)",
          },
        ],
      },
    },
  },
  ".python-version": "3.12",
  "pyproject.toml": "[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.0.1"
description = ""
readme = ""
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [ ]
dependencies = [ "pip-tools==7.4.1" ]

[project.optional-dependencies]
dev = [ ]

[tool.setuptools.package-data]
test = [ "py.typed" ]
",
}
`;

exports[`BuildTarget BuildTarget synthesizes correctly 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/pyproject.toml
.venv/
*.egg-info
build
*.pyc
__pycache__
.cache
!/.python-version
.ipynb_checkpoints
",
  ".projen/deps.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "dependencies": [
      {
        "name": "pip-tools",
        "type": "devenv",
        "version": "==7.4.1",
      },
    ],
  },
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      ".python-version",
      "pyproject.toml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Build project (install deps, compile and package)",
        "name": "build",
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "install": {
        "description": "Install dependencies from constraints.txt",
        "name": "install",
        "steps": [
          {
            "exec": ".venv/bin/pip install --require-virtualenv -c constraints.txt",
          },
        ],
      },
      "install-dev": {
        "description": "Install dependencies from constraints-dev.txt",
        "name": "install-dev",
        "steps": [
          {
            "exec": ".venv/bin/pip install --require-virtualenv -c constraints-dev.txt .[dev]",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "prepare-venv": {
        "description": "Create python virtual environment in .venv",
        "name": "prepare-venv",
        "steps": [
          {
            "exec": "python3 -m venv .venv",
          },
          {
            "exec": ".venv/bin/pip install pip-tools==7.4.1",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
      "update-lockfile": {
        "description": "Update lock file (constraints.txt) according to pyproject.toml",
        "name": "update-lockfile",
        "steps": [
          {
            "say": "Prepare venv",
            "spawn": "prepare-venv",
          },
          {
            "exec": ".venv/bin/pip-compile --all-build-deps --output-file=constraints.txt pyproject.toml",
            "say": "Updating lock file (runtime)",
          },
          {
            "exec": ".venv/bin/pip-compile --all-build-deps --extra dev --strip-extras --output-file=constraints-dev.txt pyproject.toml",
            "say": "Updating lock file (dev)",
          },
        ],
      },
    },
  },
  ".python-version": "3.12",
  "pyproject.toml": "[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "1.2.3"
description = ""
readme = ""
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [ ]
dependencies = [ "pip-tools==7.4.1" ]

[project.optional-dependencies]
dev = [ ]

[tool.setuptools.package-data]
test = [ "py.typed" ]
",
}
`;
